--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,7 +3,8 @@
 
 :root {
     --primary: #fe2c55;
-
+    --black: #000;
+    --text-color: #333;
     //Default layout
     --default-layout-header-height: 60px;
     --default-layout-with: 1150px;
@@ -24,4 +25,16 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
