--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,10 +18,14 @@
     justify-content: space-between;
 }
 
+.search,
+.search-result {
+    width: 361px;
+}
 .search {
     position: relative;
     display: flex;
-    width: 361px;
+
     height: 46px;
     padding-left: 16px;
     background-color: rgba(22, 24, 35, 0.06);
@@ -53,6 +57,14 @@
         border-color: rgba(22, 24, 35, 0.2);
     }
 }
+
+.search-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding: 5px 12px;
+    color: rgba(22, 24, 35, 0.5);
+}
+
 .clear,
 .loading {
     position: absolute;
