--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
     display: inline-flex;
     justify-content: center;
+
     font-size: 1.6rem;
     font-weight: 700;
     min-width: 100px;
@@ -23,6 +24,12 @@
 .icon + .title,
 title + .icon {
     margin-left: 8px;
+}
+
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
 }
 
 .rounded {
