--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -9,6 +9,7 @@
     width: var(--default-layout-with);
     min-height: 1000px;
     display: flex;
+    padding: 0 var(--default-layout-horizontal-spacer);
 }
 
 .content {
