--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -90,10 +90,30 @@
     }
 }
 
+.actions {
+    display: flex;
+    align-items: center;
+}
+
 .more-btn {
     font-size: 2rem;
     margin-left: 28px;
     background: transparent;
     padding: 4px 8px;
+    cursor: pointer;
+}
+
+.action-btn {
+    font-size: 2.4rem;
+    background: transparent;
+    color: #161823;
+    padding: 4px 12px;
+    cursor: pointer;
+}
+.user-avatar {
+    width: 32%;
+    height: 32px;
+    margin-left: 12px;
+    border-radius: 50%;
     cursor: pointer;
 }
