--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,6 +18,9 @@
     align-items: center;
     justify-content: space-between;
 }
+.logo-link {
+    display: flex;
+}
 
 .actions {
     display: flex;
