--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -3,8 +3,13 @@
     --search-height: 46px;
     --search-top-spacer: 9px;
     --search-button-with: 52px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
     width: 100%;
-    height: var(--default-layout-header-height, 60px);
+    height: var(--default-layout-header-height);
+    background-color: var(--white);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
