--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -3,8 +3,10 @@
     background: var(--white);
     box-shadow: rgba(0 0 0 / 12%) 0px 2px 12px;
     border-radius: 8px;
-    // max-height: min((100vh - 96px) - 60px, 734px);
+    max-height: min((100vh - 96px) - 60px, 734px);
 
     // overflow: auto;
     padding-top: 8px;
+    display: flex;
+    flex-direction: column;
 }
